<resources>
    <string name="app_name">Умный Город</string>

    <!-- Navigation -->
    <string name="news_navigation">Новости</string>
    <string name="schedule_navigation">Расписание</string>
    <string name="map_navigation">Карта</string>
    <string name="leaderboard_navigation">Победители</string>
    <string name="profile_navigation">Пользователь</string>

    <!-- News -->
    <string name="event_title_example">Завтра открытие</string>
    <string name="event_info_example">Завтра первый день игр умных городов</string>
    <string name="date_example">12.09.22</string>
    <string name="news_title">Новости\nсоревнований</string>
    <string name="live_record_title">Прямые\nтрансляции</string>

    <!-- Leaderboard -->
    <string name="leaderboard_title">Таблица победителей</string>
    <string name="competition_name">Заплыв 200 м</string>
    <string name="competition_place">Спорткомплекс Олимп</string>
    <string name="name_example">Иванов И. В.</string>
    <string name="time_example">3:34</string>
    <string name="other_players">Остальные участники</string>
    <string name="leaderboard_info_title">Все участники</string>

    <string name="auth_login_title">Вход</string>
    <string name="auth_number">Номер телефона</string>
    <string name="auth_login">Войти</string>
    <string name="auth_go_to_reg">Зарегестрироваться</string>
    <string name="auth_reg_sms_title">Подтвердите номер</string>
    <string name="auth_reg_sms_subtitle">Введите код из СМС-сообщения</string>
    <string name="auth_reg_sms_resend_btn">Отправить код повторно</string>

    <string name="schedule_title">Расписание мероприятий</string>

    <string name="profile_team_title">Моя команда</string>
    <string name="profile_team_captain">Капитан</string>
    <string name="profile_team_join">Вступить в команду</string>
    <string name="profile_results">Мои результаты</string>

    <string name="profile_medal_gold">Первое место</string>
    <string name="profile_medal_silver">Второе место</string>
    <string name="profile_medal_bronze">Третье место</string>
    <string name="profile_medal_other">Остальное</string>

    <string name="map_loading">Загрузка карты</string>
    <string name="roadmap_nav_title">Маршрут построен</string>
    <string name="roadmap_nav_dist">Расстояние:</string>
    <string name="roadmap_nav_time">Время:</string>
    <string name="roadmap_nav_km">%1$s км</string>
    <string name="roadmap_nav_min">%1$s мин</string>
    <string name="roadmap_nav_error">Не удалось построить маршрут</string>
    <string name="select_point_back">Назад</string>

    <!-- Navigation -->
    <string name="nav_title">Поиск маршрута</string>
    <string name="nav_a_title">Начало пути</string>
    <string name="nav_a_desk">Выберите начало маршрута</string>
    <string name="nav_b_title">Пункт назначения</string>
    <string name="nav_b_desk">Выберите пункт назначения</string>
    <string name="nav_r_title">Помещение</string>
    <string name="nav_r_desk">Укажите место в здании</string>
    <string name="nav_desk">Поиск самой удобной дороги, до пункта назначения, с учетом качества дорог.</string>
    <string name="marker_info_done">Выбрано</string>
    <string name="select_point_done">Готово</string>
    <string name="roadmap_nav">Маршрут</string>

    <!-- Competition -->
    <string name="join">Записаться</string>
    <string name="success_description">Вы успешно зарегестрировались, все свои записи вы можете посмотреть в ваших результатах.</string>
    <string name="success_button">Отлично</string>

    <!-- Teams -->
    <string name="create_team">Создать команду</string>
    <string name="join_team">Присоединится</string>
    <string name="search">Поиск</string>
    <string name="create_team_text">Вы можете создать свою команду, для участия в командных состязаниях.</string>
    <string name="join_team_text">Для присоединения к команде необходимо ввести код</string>
</resources>
