<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news_page"
        android:title="@string/news_navigation"
        android:icon="@drawable/ic_news"/>
    <item
        android:id="@+id/schedule_page"
        android:title="@string/schedule_navigation"
        android:icon="@drawable/ic_schedule"/>
    <item
        android:id="@+id/map_page"
        android:title="@string/map_navigation"
        android:icon="@drawable/ic_map"/>
    <item
        android:id="@+id/leaderboard_page"
        android:title="@string/leaderboard_navigation"
        android:icon="@drawable/ic_leaderboard" />

    <item
        android:id="@+id/profile_page"
        android:title="@string/profile_navigation"
        android:icon="@drawable/ic_user_profile" />
</menu>