<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="27dp"
    android:layout_marginEnd="27dp"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/elevation"
    app:cardBackgroundColor="@color/colorBackgroundSecondary"
    app:strokeColor="@color/colorBorder"
    app:strokeWidth="1dp"
    app:cardCornerRadius="@dimen/radius"
    android:layout_marginBottom="18dp"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivEvent"
            android:layout_width="match_parent"
            android:layout_height="146dp"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="21dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto_regular"
            android:layout_weight="1"
            android:text="@string/event_title_example"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/textTitle" />
        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto_regular"
            android:layout_weight="1"
            android:text="@string/event_info_example"
            android:layout_marginTop="5dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/textNormal" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_weight="1"
            android:text="@string/date_example"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/textNormal" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>