<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical" android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:gravity="center"
>

    <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <online.jutter.roadmapview.RMMapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />

        <FrameLayout
                android:id="@+id/mapMenuContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                android:clipChildren="false"
                android:clipToPadding="false"
        >

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/navDataContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:layout_gravity="center_horizontal"
            >

                <ProgressBar
                        android:id="@+id/pbNavLoading"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                />


                <LinearLayout
                        android:id="@+id/navResult"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/roadmap_nav_title"
                            android:textColor="@color/colorTextPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="12sp"
                    />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                    >

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roadmap_nav_dist"
                                android:textColor="@color/colorTextPrimary"
                                android:fontFamily="@font/roboto_regular"
                                android:textSize="12sp"
                        />

                        <TextView
                                android:id="@+id/tvNavKm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roadmap_nav_km"
                                android:textColor="@color/colorTextPrimary"
                                android:fontFamily="@font/roboto_bold"
                                android:textSize="20sp"
                                android:layout_marginHorizontal="8dp"
                        />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roadmap_nav_time"
                                android:textColor="@color/colorTextPrimary"
                                android:fontFamily="@font/roboto_regular"
                                android:textSize="12sp"
                        />

                        <TextView
                                android:id="@+id/tvNavMin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roadmap_nav_min"
                                android:textColor="@color/colorTextPrimary"
                                android:fontFamily="@font/roboto_bold"
                                android:textSize="20sp"
                                android:layout_marginHorizontal="8dp"
                        />


                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:cardBackgroundColor="@color/colorBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
            >

                <LinearLayout
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >

                    <LinearLayout
                            android:id="@+id/btnNav"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                    >

                        <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/ic_nav"
                                android:layout_marginBottom="4dp"
                        />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roadmap_nav"
                                android:textColor="@color/colorTextSecondary"
                                android:fontFamily="@font/roboto_regular"
                                android:textSize="12sp"
                        />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <online.jutter.smartsity.ui.view.floorsview.FloorsView
                    android:id="@+id/floorsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
            />

        </FrameLayout>

    </FrameLayout>

    <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_gravity="center"
    />

    <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/map_loading"
            android:visibility="gone"
            android:layout_gravity="center"
    />

</LinearLayout>